--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -176,8 +176,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
+        tag_name: x86_OpenWrt_${{ steps.tag.outputs.release_tag }}
+        body_path: |
+               This is OpenWrt firmware for x86
+               * Firmware information
+               * x86是自用固件，插件根据个人需要删减.
+               * ARMv8是精简固件.
+               * 默认IP: 192.168.1.1
+               * 默认密码: password
         files: ${{ env.FIRMWARE }}/*
 
     - name: Telegram notification
