--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -199,6 +199,7 @@ jobs:
           * Default IP: 192.168.1.1
           * Default username: root
           * Default password: password
+        files: ${{ env.FIRMWARE }}/*
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
