--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -173,7 +173,7 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: ${{ env.DATE }} for ${{ env.PRODUCT_NAME }}
+        name: x86_OpenWrt_${{ env.PRODUCT_NAME }} for ${{ env.DATE }}
         allowUpdates: true
         tag: OpenWrt_x86_${{ env.FILE_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
