--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -173,9 +173,9 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: x86_OpenWrt_${{ env.PRODUCT_NAME }} for ${{ env.DATE }}
+        name: x86_OpenWrt${{ env.PRODUCT_NAME }} for ${{ env.DATE }}
         allowUpdates: true
-        tag: OpenWrt_x86_${{ env.FILE_NAME }}
+        tag: OpenWrt_x86${{ env.FILE_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           This is OpenWrt firmware for x86
