--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -176,6 +176,7 @@ jobs:
         tag: OpenWrt_x86${{ env.FILE_NAME }}
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
+        removeArtifacts: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           This is OpenWrt firmware for x86
