--- a/.github/workflows/OpenWrt_Selfuse.yml
+++ b/.github/workflows/OpenWrt_Selfuse.yml
@@ -206,11 +206,11 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
+        tag: OpenWrt_Selfuse_${{ env.PACKAGED_OUTPUTDATE }}
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         removeArtifacts: true
-        tag: Selfuse_OpenWrt_${{ env.PACKAGED_OUTPUTDATE }}
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         body: |
           This is OpenWrt firmware for Armvirt 64
           * Firmware information
