--- a/.github/workflows/OpenWrt_ARMv8.yml
+++ b/.github/workflows/OpenWrt_ARMv8.yml
@@ -199,7 +199,7 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        tag: ARMv8_OpenWrt_${{ env.PACKAGED_OUTPUTDATE }}
+        tag: OpenWrt_ARMv8_${{ env.PACKAGED_OUTPUTDATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         removeArtifacts: true
