--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -173,8 +173,8 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
+        name: ${{ env.FILE_DATE }} for ${{ env.PRODUCT_NAME }}
         tag: OpenWrt_x86_${{ env.FILE_NAME }}
-        echo: ${{ env.FILE_DATE }}
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
         removeArtifacts: true
