--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -60,6 +60,7 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
 
 #    - name: Cache
 #      uses: klever1988/cachewrtbuild@test
@@ -173,7 +174,7 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        name: ${{ env.FILE_DATE }} for ${{ env.PRODUCT_NAME }}
+        name: OpenWrt_x86_${{ env.PRODUCT_NAME }} for ${{ env.DATE }}
         tag: OpenWrt_x86_${{ env.FILE_NAME }}
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
