--- a/OpenWrt_ARMv8.config
+++ b/OpenWrt_ARMv8.config
@@ -6472,6 +6472,7 @@ CONFIG_PACKAGE_bash=y
 # CONFIG_PACKAGE_script-utils is not set
 # CONFIG_PACKAGE_serialconsole is not set
 # CONFIG_PACKAGE_setterm is not set
+# CONFIG_PACKAGE_tintin is not set
 # CONFIG_PACKAGE_tio is not set
 # CONFIG_PACKAGE_tmux is not set
 CONFIG_PACKAGE_ttyd=y
