--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -175,7 +175,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         name: OpenWrt_x86_${{ env.PRODUCT_NAME }} && $(date +"%Y.%m.%d-%H%M")
-        tag: OpenWrt_x86${{ env.FILE_NAME }} && $(date +"%Y.%m.%d-%H%M")
+        tag: OpenWrt_x86${{ env.FILE_NAME }}
         artifacts: ${{ env.FIRMWARE }}/*
         allowUpdates: true
         removeArtifacts: true
